refactored auth server config